myhome/src/objects/college__c.object
<CustomObject>
    <fields>
        <fullName>College_address__c</fullName>
        <label>College address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_backlocks__c</fullName>
        <label>Total backlocks</label>
        <summarizedField>Student__c.number_of_backlocks__c</summarizedField>
        <summaryForeignKey>Student__c.collegename__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalnumber_of_students_del__c</fullName>
        <description>This will provide the number of students in a college</description>
        <label>totalnumber of students</label>
        <summaryForeignKey>Student__c.collegename__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>college</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>college Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>college</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>